# V2X_Application

Run/: CMakeLists.txt
Run/src/: run-cmd.c  run_cmd_nyc.sh
